tests/rosetta/out/C/abc-problem.error
cc: exit status 1
/tmp/abc-problem.c: In function ‘_lambda0’:
/tmp/abc-problem.c:61:32: warning: implicit declaration of function ‘canSpell’ [-Wimplicit-function-declaration]
   61 | int _lambda0(char *w) { return canSpell(w, _lambda0_bl); }
      |                                ^~~~~~~~
/tmp/abc-problem.c: In function ‘canSpell’:
/tmp/abc-problem.c:98:13: warning: implicit declaration of function ‘lower’ [-Wimplicit-function-declaration]
   98 |   char *c = lower(tmp7);
      |             ^~~~~
/tmp/abc-problem.c:98:13: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
/tmp/abc-problem.c:104:11: warning: comparison between pointer and integer
  104 |     if (c == lower(tmp8) || c == lower(tmp9)) {
      |           ^~
/tmp/abc-problem.c:104:31: warning: comparison between pointer and integer
  104 |     if (c == lower(tmp8) || c == lower(tmp9)) {
      |                               ^~
/tmp/abc-problem.c:116:47: error: request for member ‘len’ in something not a structure or union
  116 |       char *tmp12 = slice_string(word, 1, word.len);
      |                                               ^
